syntax = "proto3";
package registry_info;

option go_package = "api/registry_info";

message PartitionStatus{
    optional string LeaderAddress  = 1;
    repeated string FollowerAddress = 2;
    optional uint64 Version = 3;
}

message SubList{
    repeated string SubTopics = 1;
}

message OwnPartitions{
    repeated string TopicName = 1;
    repeated int32  PartitionNum=2;
}